fix: style for scrollbars

--- a/src/scss/App.scss
+++ b/src/scss/App.scss
@@ -17,11 +17,18 @@
     border-radius: 6px;
     border: 0px solid rgb(3,3,3);
   }
+body::-webkit-scrollbar-track {
+    background: #ebe0ab;
+  }
+body::-webkit-scrollbar-thumb {
+    border-radius: 0px;
+}
 #root {
   display: flex;
   flex-direction: column;
   height: 100vh;
 }
+
 html{
   font-size: 10px;
   font-family: 'Open Sans', sans-serif;
